user-api/overlays/aws-prod/deploymentconfig.yaml
---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: user-api
spec:
  replicas: 1
  selector:
    app.kubernetes.io/component: user-api
    app.kubernetes.io/managed-by: aicoe-thoth-devops
    app.kubernetes.io/name: thoth
    service: user-api
  template:
    metadata:
      labels:
        app.kubernetes.io/component: user-api
        app.kubernetes.io/managed-by: aicoe-thoth-devops
        app.kubernetes.io/name: thoth
        discovery.3scale.net: "true"
        service: user-api
      annotations:
        discovery.3scale.net/description-path: "/api/v1/openapi.json"
        discovery.3scale.net/path: "/api/v1"
        discovery.3scale.net/port: "443"
        discovery.3scale.net/scheme: https
    spec:
      serviceAccountName: user-api
      containers:
        - name: user-api
          image: user-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: secrets
              mountPath: /mnt/secrets
              readOnly: true
          resources:
            requests:
              memory: "1Gi"
              cpu: "2"
            limits:
              memory: "1Gi"
              cpu: "2"
          readinessProbe:
            httpGet:
              path: "/readiness"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: "/liveness"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 10
      volumes:
        - name: secrets
          secret:
            secretName: "kafka"
            items:
              - key: kafka_ca.crt
                path: kafka_ca.crt
              - key: kafka_user.crt
                path: kafka_user.crt
              - key: kafka_user.key
                path: kafka_user.key
              - key: kafka_user.password
                path: kafka_user.password
  test: false
